<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="firstap.newapp.com.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_baseline_skip_next_24"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:icon="@drawable/ic_baseline_send_24"
        android:orderInCategory="101"
        android:title="@string/send_as_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText" />
</menu>
