<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<group android:checkableBehavior="single">
    <item
        android:title="Notes"
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_baseline_event_note_24"
        />
    <item
        android:title="@string/courses"
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_baseline_library_books_24"
        />
</group>

<item android:title="Advanced Options">
    <menu>
        <item
            android:title="Settings"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            />
        <item
            android:title="Share"
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            />
        <item
            android:title="Send"
            android:id="@+id/nav_send"
            android:icon="@drawable/send"
            />
    </menu>
</item>

</menu>